--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@ To add a program to a tab, use the Add Program option and enter the name of the 
 
 <h4 id="section-videosandgalleries">Videos and Photo Galleries</h4>
 
-<p>To place videos and photo galleries into an area of the site, the first step is to create the video or gallery. Follow these steps’ to create the video or a gallery, then follow these steps to embed it into the site.</p>
+<p>To place videos and photo galleries into an area of the site, the first step is to create the video or gallery. Follow <a href="#section-generalsteps">these steps’</a>to create the video or a gallery, then follow these steps to embed it into the site.</p>
 
 <ol>
 <li>To add a video or gallery to a page, add a feature teaser or teaser block to a page.</li>
