Updated the login link

--- a/index.html
+++ b/index.html
@@ -908,7 +908,6 @@ The table component is for adding tabular data to a page. Please note that the t
 <p>Header images are part of the billboard component. They appear at the top of certain content types. The slider is used on the homepage and subsites only. </p>
 
 <p><em>Recommended Image Size:</em> <strong>3840 px x 2160 px</strong><br/>
-<em>Recommended Image Ratio:</em> <strong>16:9</strong><br/>
 <img src="assets/billboard_general.png" alt="General Billboard" title="General Billboard" /> </p>
 
 <hr />
@@ -1070,7 +1069,7 @@ Text: 15 - 20 words</p>
 
 <h2 id="section-login">Logging Into the Site</h2>
 
-<p>To manage content, including your profile, go to <a href="http://northcentralcollege.edu/user">http://northcentralcollege.edu/user</a> and log in with your North Central network account. This is the same username and password you use for your email, e.g., username@noctrl.edu.</p>
+<p>To manage content, including your profile, go to <a href="http://northcentralcollege.edu/login">http://northcentralcollege.edu/login</a> and log in with your North Central network account. This is the same username and password you use for your email, e.g., username@noctrl.edu.</p>
 
 <hr />
 
@@ -1261,7 +1260,7 @@ The main content for programs is organized by tabs. By default, every program ha
 Members of North Central College’s faculty and staff have profiles on the website. Follow these steps to manage yours:</p>
 
 <ol>
-<li><p>Go to http://northcentralcollege.edu/user and log into the site using your North Central network account. This is the same username and password you use for your email, e.g., username@noctrl.edu.</p></li>
+<li><p>Go to http://northcentralcollege.edu/login and log into the site using your North Central network account. This is the same username and password you use for your email, e.g., username@noctrl.edu.</p></li>
 <li><p>On the top of the screen you’ll see your username. Click it, then click Edit profile.</p></li>
 <li><p>Click on Main Profile. This is where you can enter or modify items such as your contact information and a short biography.</p></li>
 <li><p>After you’ve made your entries or edits, go to the bottom of the screen and click Save.</p></li>
